fixed mobile spacing

--- a/app/styles/_onboarding.scss
+++ b/app/styles/_onboarding.scss
@@ -98,7 +98,7 @@
 
 		//MOBILE
 		@media (max-width: 400px) {
-			margin-top: 20px;
+			margin-top: 40px;
 		}
 
 		@media (max-width: 810px) {
@@ -123,6 +123,7 @@
 			//MOBILE
 			@media (max-width: 400px) {
 				padding-bottom: 10px;
+				font-size: 2.8em;
 			}
 		}
 
